<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/car_list_fragment"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/title_car_list" />

    <item
        android:id="@+id/registrationFragment"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/registration_fragment" />

</menu>