...
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="?attr/colorOnSecondary">

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/button_text_rent"
            android:textSize="12sp"/>

        <LinearLayout
...
